added EC over finite curves midway

--- a/homework/Week 1/Week 1, Homework 1 (completed).ipynb
+++ b/homework/Week 1/Week 1, Homework 1 (completed).ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "6462ce3c",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calculating 1590868 took 3.82 seconds\n"
+      "calculating 1590868 took 3.59 seconds\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "4d6986d8",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "cb7eb435",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "d397aa7e",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "8fb84b98",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "d15cb7d8",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "62cdb28d",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "b042bddd",
    "metadata": {},
    "outputs": [
@@ -238,19 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "f8869242",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'g' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\PC\\Desktop\\rareskills\\homework\\Week 1, Homework 1 (completed).ipynb Cell 16\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/rareskills/homework/Week%201%2C%20Homework%201%20%28completed%29.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/rareskills/homework/Week%201%2C%20Homework%201%20%28completed%29.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m b \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PC/Desktop/rareskills/homework/Week%201%2C%20Homework%201%20%28completed%29.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mpow\u001b[39m(g, a, n) \u001b[39m*\u001b[39m \u001b[39mpow\u001b[39m(g, b, n) \u001b[39m==\u001b[39m \u001b[39mpow\u001b[39m(g, a \u001b[39m+\u001b[39m b, n))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'g' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -274,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "bbacb1ae",
    "metadata": {},
    "outputs": [
@@ -315,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "10c8172d",
    "metadata": {},
    "outputs": [
@@ -325,7 +321,7 @@
        "1.6619797259514097e-09"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "dde06b67",
    "metadata": {},
    "outputs": [
@@ -360,7 +356,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "2ea5a6ba",
    "metadata": {},
    "outputs": [
@@ -392,7 +388,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "21390185",
    "metadata": {},
    "outputs": [
@@ -429,7 +425,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "9704397d",
    "metadata": {},
    "outputs": [
@@ -459,7 +455,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "ad9ea620",
    "metadata": {},
    "outputs": [
@@ -546,14 +542,6 @@
     "\n",
     "print(\"The result of 53/192 + 61/511 (mod 1033) is: {}\".format(result))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09563356",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
