added EC over finite curves midway

--- a/homework/Week 1/Week 1, Homework 1 (completed).ipynb
+++ b/homework/Week 1/Week 1, Homework 1 (completed).ipynb
@@ -484,6 +484,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad3c0c40",
+   "metadata": {},
+   "source": [
+    "convert the equations to a form g^x mod p "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c7a9d38",
    "metadata": {},
    "source": [
