--- a/homework/Week 1/Week 1, Homework 1 (completed).ipynb
+++ b/homework/Week 1/Week 1, Homework 1 (completed).ipynb
@@ -483,11 +483,106 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "ad3c0c40",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nApproach: brute-force\\n\\n1: 2x + 8y = 7944\\n2: 5x + 3y = 4764\\n\\nfrom eq 1:\\n3:   x + 4y = 3972\\n          x = 3972 - 4y \\n\\nSub x into eq 2:\\n    5(3972 - 4y) + 3y = 4764\\n    19,860 - 20y + 3y = 4764\\n                  17y = 15,096\\n                    y = 888\\n\\ntherefore,\\n    x = 3972 - 4(888) = 420\\n79\\n'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "convert the equations to a form g^x mod p "
+    "# convert the equations to the form: g^x (mod p) \n",
+    "''' \n",
+    "Approach: modular\n",
+    "\n",
+    "1: 2x + 8y = 7944\n",
+    "2: 5x + 3y = 4764\n",
+    "\n",
+    "Reduce eq1:\n",
+    "\n",
+    "2x + 8y = 7944  -->  x + 4y = 3972 \n",
+    "\n",
+    "Convert equations to modulo 7:\n",
+    "\n",
+    "x + 4y  = 3972  -->   x + 4y = 3 (mod 7) \n",
+    "5x + 3y = 4764  -->  5x + 3y = 4 (mod 7) \n",
+    "\n",
+    "from x + 4y = 2 (mod 7):\n",
+    "    x = 3 - 4y (mod 7)\n",
+    "\n",
+    "Sub x into eq2:\n",
+    "    5x + 3y = 4             (mod 7) \n",
+    "    5(3 - 4y) + 3y = 4      (mod 7)\n",
+    "    15 - 20y  + 3y = 4      (mod 7)\n",
+    "    \n",
+    "    17y = 11    (mod 7) \n",
+    "    17y = 4    (mod 7) \n",
+    "\n",
+    "'''\n",
+    "# Compute the modular inverse\n",
+    "modulus = 7\n",
+    "base = 17\n",
+    "modInverse = pow(base, -1, modulus)\n",
+    "print(modInverse) #5\n",
+    "\n",
+    "''' \n",
+    "mod inverse of 17 is 5:\n",
+    "    17 * 5 = 1 (mod 7)\n",
+    "\n",
+    "therefore, \n",
+    "   5 * 17y = 4 * 5   (mod 7) \n",
+    "         y = 20      (mod 7)    \n",
+    "         y = 6       (mod 7)    \n",
+    "\n",
+    "If y = 6,\n",
+    "    x = 3 - 4y          (mod 7)\n",
+    "      = 3 - 4(6)        (mod 7)\n",
+    "      = 3 - 4(6)        (mod 7)\n",
+    "      = -21\n",
+    "      = 0               (mod 7)\n",
+    "\n",
+    "Answer:\n",
+    "x = 0, y =6.\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Approach: brute-force\n",
+    "\n",
+    "1: 2x + 8y = 7944\n",
+    "2: 5x + 3y = 4764\n",
+    "\n",
+    "from eq 1:\n",
+    "3:   x + 4y = 3972\n",
+    "          x = 3972 - 4y \n",
+    "\n",
+    "Sub x into eq 2:\n",
+    "    5(3972 - 4y) + 3y = 4764\n",
+    "    19,860 - 20y + 3y = 4764\n",
+    "                  17y = 15,096\n",
+    "                    y = 888\n",
+    "\n",
+    "therefore,\n",
+    "    x = 3972 - 4(888) = 420\n",
+    "79\n",
+    "'''"
    ]
   },
   {
