--- a/homework/Week 1/Week 1, Homework 1 (completed).ipynb
+++ b/homework/Week 1/Week 1, Homework 1 (completed).ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "ad9ea620",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
       "The modular inverse of 192 modulo 1033 is: 382\n",
       "The modular inverse of 511 modulo 1033 is: 845\n",
       "The result of 53/192 (mod 1033) is: 619\n",
-      "The result of 61/511 (mod 1033) is: 619\n",
+      "The result of 61/511 (mod 1033) is: 928\n",
       "The result of 53/192 + 61/511 (mod 1033) is: 514\n"
      ]
     }
@@ -638,7 +638,7 @@
     "\n",
     "# 61/511 (mod 1033) \n",
     "result_b = pow(frac2[0] * mod_inverse_2, 1, modulus)\n",
-    "print(\"The result of 61/511 (mod 1033) is: {}\".format(result_a))\n",
+    "print(\"The result of 61/511 (mod 1033) is: {}\".format(result_b))\n",
     "\n",
     "# 53/192 (mod 1033) + 61/511 (mod 1033) \n",
     "result = pow(result_a + result_b, 1, modulus)\n",
